// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive-wrapper correctly inserts the link tag for the component only once 1`] = `
<link
  href="//components.timesdev.tools/lib2/times-chapter-header-1.0.0/chapter-header.html"
  rel="import"
/>
`;

exports[`interactive-wrapper polyfillWCIfNecessary adds the polyfill to the page only once 1`] = `
<script
  async="async"
  src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.24/webcomponents-lite.min.js"
/>
`;

exports[`interactive-wrapper re-shows the placeholder on re-render 1`] = `
<div>
  <div
    style="height: 150px; position: relative; display: none !important;"
  />
  <div>
    <chapter-header
      chaptercounter="Chapter%20one"
      heading="A heading"
      standfirst="A standfirst"
    />
  </div>
</div>
`;

exports[`interactive-wrapper renders correctly once polyfill is loaded 1`] = `
<div>
  <div
    style="height: 150px; position: relative; display: none !important;"
  />
  <div>
    <chapter-header
      chaptercounter="Chapter%20one"
      heading="A heading"
      standfirst="A standfirst"
    />
  </div>
</div>
`;

exports[`interactive-wrapper renders the placeholder correctly 1`] = `
<InteractiveWrapper
  attributes={
    Object {
      "chaptercounter": "Chapter%20one",
      "heading": "A heading",
      "standfirst": "A standfirst",
    }
  }
  element="chapter-header"
  fetchPolyfill={[Function]}
  id="a0534eee-682e-4955-8e1e-84b428ef1e79"
  source="//components.timesdev.tools/lib2/times-chapter-header-1.0.0/chapter-header.html"
>
  <div
    style={
      Object {
        "height": 150,
        "position": "relative",
      }
    }
  >
    <Placeholder />
  </div>
  <div />
</InteractiveWrapper>
`;

exports[`interactive-wrapper updates the rendered interactive on update 1`] = `
<div>
  <div
    style="height: 150px; position: relative; display: none !important;"
  />
  <div>
    <another-component
      another="attribute"
    />
  </div>
</div>
`;
